source/blender/gpu/intern/gpu_viewport.c
@@ -632,6 +632,15 @@ void GPU_viewport_free(GPUViewport *viewport)
   if (viewport->vmempool.passes != NULL) {
     BLI_mempool_destroy(viewport->vmempool.passes);
   }
+  if (viewport->vmempool.images != NULL) {
+    BLI_mempool_iter iter;
+    GPUTexture **tex;
+    BLI_mempool_iternew(viewport->vmempool.images, &iter);
+    while ((tex = BLI_mempool_iterstep(&iter))) {
+      GPU_texture_free(*tex);
+    }
+    BLI_mempool_destroy(viewport->vmempool.images);
+  }
 
   DRW_instance_data_list_free(viewport->idatalist);
   MEM_freeN(viewport->idatalist);
